corrigido erro de caminho de imagem em ABOUT ME e também retirado 2 links que não tinham correspondencia.

--- a/about-me-en.html
+++ b/about-me-en.html
@@ -22,7 +22,7 @@
     </header>
             <main>
         <div class="bigContainer">
-                    <img src="../img/about-me.jpg" alt="a bulky latin guy with red suspenders and bowtie" class="aboutPic">
+                    <img src="./img/about-me.jpg" alt="a bulky latin guy with red suspenders and bowtie" class="aboutPic">
                     <div class="columnize">
                         <div class="namePlay">
                         <h1 class="h1">
