terceiro commit - corrigindo erro no caminho da logo

--- a/header.html
+++ b/header.html
@@ -9,7 +9,7 @@
 <body>
         <header class="header">
             <section class="groupHead">
-                <a href="#" class="logo"><img src="../img/logo.png" alt="logo" class="mylogo"></a>
+                <a href="#" class="logo"><img src="./img/logo.png" alt="logo" class="mylogo"></a>
                 <nav class="navbar">  
                    <a href="index.html" class="listagem">Home</a><p class="separador">|</p> 
                     <a href="about-me-en.html" class="listagem">About me</a><p class="separador">|</p>
