voltando ao que era no CSS para poder corrigir erros com mais tempo e alterando caminhos de imagens

--- a/es/portafolio.html
+++ b/es/portafolio.html
@@ -128,7 +128,7 @@
 
                 <div class="carro">
                     <h3 class="project2">Landing page de Cafetería</h3>
-                    <img class="portImg" src="/img/cafe.webp" alt="un gif de un sitio de cafetería desplazándose hacia abajo">
+                    <img class="portImg" src="../img/cafe.webp" alt="un gif de un sitio de cafetería desplazándose hacia abajo">
                     <p>Hice esta landing page simple basada en un video de youtube mientras estudiaba sobre CSS y responsividad. También deberías abrir mis proyectos en tu celular y revisarlos.</p>
                     <p>Código en GitHub:<a href="https://github.com/JazzoCordeiro/coffeeshop">HAZ CLIC AQUÍ</a></p>
                     <p>Prueba mi trabajo <a href="https://jazzocordeiro.github.io/coffeeshop/">HAZ CLIC AQUÍ</a></p>
