--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jazao's Portfolio</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header class="header">
@@ -36,7 +36,7 @@
                     <!-- content-->
                     <div class="car active"> <!-- active -->
                         <h3 class="project1">Practical tester Quality Analyst</h3>
-                        <img class="portImg" src="../img/asfalto.png" alt="a black and white noir logo game resembling a woman smoking">
+                        <img class="portImg" src="./img/asfalto.png" alt="a black and white noir logo game resembling a woman smoking">
                         <p>This was an electronic game for the visually impaired made with the unity engine. I was part
                             of the team testing the game, searching for bugs and issues with the audio direction and
                             volume that guide the player through the gameplay. The game is no longer available, but you
@@ -63,7 +63,7 @@
 
                     <div class="car">
                         <h3 class="project1">Secretaria do Estado de São Paulo's Intranet</h3>
-                        <img class="portImg" src="../img/sde.webp" alt="a gif of a intranet site">
+                        <img class="portImg" src="./img/sde.webp" alt="a gif of a intranet site">
                         <p>Occasional Changes: During my work as a technician, I occasionally receive requests to modify
                             appearance details. These tasks include changing specific images, adding or removing icons,
                             adjusting CSS after changes made by others, and similar responsibilities. Essentially, I
@@ -75,7 +75,7 @@
 
                     <div class="car">
                         <h3 class="project1">Clock and temperature</h3>
-                        <img class="portImg" src="../img/clock.gif" alt="the image of a clock app">
+                        <img class="portImg" src="./img/clock.gif" alt="the image of a clock app">
                         <p>This app began as a personal project for my JavaScript studies and responsive CSS, starting
                             with a simple clock. Then, I added a weather search feature and showed it to my sister. She
                             liked it and requested an alarm feature with funny sounds and a voiceover A.I. I implemented
@@ -119,7 +119,7 @@
             <section class="carrossel2">
                 <div class="carro active2">
                     <h3 class="project2">Soda lading page</h3>
-                    <img class="portImg" src="../img/refri.gif" alt="an orange page with a can of orange soda and pieces of fruits floating">
+                    <img class="portImg" src="./img/refri.gif" alt="an orange page with a can of orange soda and pieces of fruits floating">
                     <p>I made this simple landing page based on a youtube video while I was studying about CSS and
                         animation. It is simple but nice looking. This is also where I learned to make a carousel of
                         images</p>
@@ -130,7 +130,7 @@
 
                 <div class="carro">
                     <h3 class="project2">Employees list</h3>
-                    <img class="portImg" src="../img/todo.gif" alt="a gif of a to-do list">
+                    <img class="portImg" src="./img/todo.gif" alt="a gif of a to-do list">
                     <p>To improve my JavaScript skills, especially with CRUD operations, I built an employee list that
                         stores names, salaries, and job titles in local storage. You can edit and delete all entries.
                         The same structure could be adapted for a to-do list or a note-taking app.</p>
@@ -141,7 +141,7 @@
 
                 <div class="carro">
                     <h3 class="project2">Pokédex</h3>
-                    <img class="portImg" src="../img/pokedex.gif" alt="the image of a pokedex showing a bulbasaur">
+                    <img class="portImg" src="./img/pokedex.gif" alt="the image of a pokedex showing a bulbasaur">
                     <p>Every newcomer nowadays has created a Pokédex while learning JavaScript, especially to practice
                         working with API requests and CRUD operations. It was my very first project while studying at
                         the Pan Bank Front End Boot Camp.</p>
@@ -152,7 +152,7 @@
 
                 <div class="carro">
                     <h3 class="project2">Coffeeshop landing page</h3>
-                    <img class="portImg" src="/img/cafe.webp" alt="a gif of a coffee shop website scrolling down">
+                    <img class="portImg" src="./img/cafe.webp" alt="a gif of a coffee shop website scrolling down">
                     <p>I made this simple landing page based on a youtube video while I was studying about CSS and
                         responsiveness. You should also open my projects at your mobile and check.</p>
                     <p>Code at GitHub:<a href="https://github.com/JazzoCordeiro/coffeeshop">CLICK HERE</a></p>
