--- a/pt-br/portfoliopt.html
+++ b/pt-br/portfoliopt.html
@@ -128,7 +128,7 @@
 
                 <div class="carro">
                     <h3 class="project2">Landing page de Cafeteria</h3>
-                    <img class="portImg" src="/img/cafe.webp" alt="um gif de um site de cafeteria rolando para baixo">
+                    <img class="portImg" src="../img/cafe.webp" alt="um gif de um site de cafeteria rolando para baixo">
                     <p>Eu fiz esta landing page simples com base em um vídeo do youtube enquanto estudava sobre CSS e responsividade. Você também deve abrir meus projetos no seu celular e conferir.</p>
                     <p>Código no GitHub:<a href="https://github.com/JazzoCordeiro/coffeeshop">CLIQUE AQUI</a></p>
                     <p>Teste meu trabalho <a href="https://jazzocordeiro.github.io/coffeeshop/">CLIQUE AQUI</a></p>
