--- a/es/es.html
+++ b/es/es.html
@@ -6,27 +6,16 @@
     <title>Portafolio de Jazão</title>
     <link rel="stylesheet" href="../style.css">
 </head>
-<body>
-    <header class="header">
+<header class="header">
         <div id="header-placeholder"></div>
-        <script> fetch('./header-es.html').then(response => response.text()).then(data => {
-                document.getElementById('header-placeholder').innerHTML = data; initializeThemeSwitcher(); // Chama a função para inicializar o botão de modo 
-            }); function initializeThemeSwitcher() {
-                let trilho = document.getElementById('trilho'); if (!trilho) { console.error('Elemento "trilho" não encontrado'); return; } let body = document.querySelector('body'); let header = document.querySelector('.header'); let tooltips = document.querySelectorAll('.tooltip'); // Verificar se o modo light foi salvo no localStorage e aplicar
-                if (localStorage.getItem('theme') === 'light') { body.classList.add('light'); header.classList.add('light'); trilho.classList.add('light'); tooltips.forEach(function (tooltip) { tooltip.classList.add('light'); }); } // Alterna entre o modo normal e o modo light 
-                trilho.addEventListener('click', function () {
-                    trilho.classList.toggle('light'); body.classList.toggle('light'); header.classList.toggle('light'); tooltips.forEach(function (tooltip) { tooltip.classList.toggle('light'); }); // Salva a preferência no localStorage (modo light ou normal) 
-                    if (body.classList.contains('light')) { localStorage.setItem('theme', 'light'); } else { localStorage.removeItem('theme'); }
-                });
-            } </script>
     </header>
+<body>
     <main>
-        <div class="together">
             <section class="homeContainer">
                 <img src="../img/eu.jpeg" alt="Jazão Cordeiro, un hombre latino robusto vistiendo ropa negra" class="personalPhoto">
                 <article class="introduction">
                     <h1 class="h1">Portafolio de Jazão Cordeiro Rosa</h1>
-                    <p class="paragraph"><span style="color: var(--letter-b-bright); font-weight: bold;">¡Bienvenido! Soy Jazão, pero puedes llamarme Jazzo</span> (puedes encontrar mi nombre completo y otros detalles en la sección <span style="color: var(--letter-b-bright); font-weight: bold;">"Sobre mi"</span> ). Soy un programador web front-end que vive en Brasil, tengo 38 años y hablo portugués, inglés y español. </b>. Este sitio está disponible en los tres idiomas.</p>
+                    <p class="paragraph"><span style="color: var(--letter-b-bright); font-weight: bold;">¡Bienvenido! Soy Jazão, pero puedes llamarme Jazzo</span> (puedes encontrar mi nombre completo y otros detalles en la sección <span style="color: var(--letter-b-bright); font-weight: bold;">"Sobre mi"</span> ). Soy un programador web front-end que vive en Brasil, tengo 38 años y <b>hablo portugués, inglés y español. </b>. Este sitio está disponible en los tres idiomas.</p>
 
                     <p class="paragraph">Este sitio sirve tanto como mi currículum como mi portafolio, y también forma parte de mi portafolio. Aquí encontrarás información sobre los cursos que he estudiado, certificados, algunos artículos que he escrito, mis proyectos y cualquier otra cosa que encuentre interesante. Cualquier cosa no relacionada con el trabajo se colocará en la sección "Varios".</p><br>
 
