--- a/pt-br/header-pt.html
+++ b/pt-br/header-pt.html
@@ -1,12 +1,4 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style.css">
-    <title>header</title>
 </head>
-<body>
         <header class="header">
             <section class="groupHead">
                 <a href="#" class="logo"><img src="../img/logo.png" alt="logo" class="mylogo"></a>
@@ -32,6 +24,6 @@
              
                             </section>
         </header>
-        <script src="./main.js"></script>
+        <script src="../main.js"></script>
 </body>
 </html>
