--- a/index.html
+++ b/index.html
@@ -8,60 +8,80 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
+
 <body>
-    <header class="header">
+     <header class="header">
         <div id="header-placeholder"></div>
     </header>
+ <main>
+        <section class="homeContainer">
+            <img src="./img/eu.jpeg" alt="Jazão Cordeiro, a bulky latin guy dressed in black" class="personalPhoto">
+            <article class="introduction">
+                <h1 class="h1">Jazão Cordeiro Rosa's Portfolio</h1>
+                <p class="paragraph">
+                    <span style="color: var(--letter-b-bright); font-weight: bold;">Welcome! I'm Jazão, but you can call me Jazzo</span>
+                    (you can find my full name and other details in the
+                    <span style="color: var(--letter-b-bright); font-weight: bold;">"About Me"</span> section).
+                    I'm a front-end web developer living in Brazil, 38 years old, and <b>I speak Portuguese, English, and Spanish</b>.
+                    This site is available in all three languages.
+                </p>
 
-    <main>
-            <section class="homeContainer">
-                <img src="./img/eu.jpeg" alt="Jazão Cordeiro, a bulky latin guy dressed in black" class="personalPhoto">
-                <article class="introduction">
-                    <h1 class="h1">Jazão Cordeiro Rosa's Portfolio</h1>
-                    <p class="paragraph"><span style="color: var(--letter-b-bright); font-weight: bold;">Welcome! I'm Jazão, but you can call me Jazzo</span> (you can find my full name and
-                        other details in the <span style="color: var(--letter-b-bright); font-weight: bold;">"About Me"</span> section).
-                        I'm a front-end web developer living in Brazil, 38 years old, and <b>I speak Portuguese, English,
-                        and Spanish</b>. This site is available in all three languages.</p>
+                <p class="paragraph">
+                    This website serves as both my resume and portfolio, and it's also part of my portfolio. Here,
+                    you'll find information about like the courses I've studied, certificates, some articles I've
+                    written, my projects, and anything else I find interesting. Anything unrelated to work will be
+                    placed in the "Miscellaneous" section.
+                    You'll also find a summarized resume available for download if you prefer.
+                </p><br>
 
-                    <p class="paragraph">This website serves as both my resume and portfolio, and it's also part of my portfolio. Here,
-                        you'll find information about like the courses I've studied, certificates, some articles I've
-                        written, my projects, and anything else I find interesting. Anything unrelated to work will be
-                        placed in the "Miscellaneous" section.
-                        You'll also find a summarized resume available for download if you prefer.</p><br>
+                <p class="paragraph">
+                    I've been seriously studying front-end web programming since 2023. Before that, I had completed a few personal projects and done some freelance work for
+                    friends and family, but I never intended to pursue it as a career. What I mean is that today I
+                    am absolutely fascinated by programming, and I plan to dive much deeper into it! How did I not
+                    realize this sooner?
+                </p><br>
+            </article>
+        </section>
 
-                    <p class="paragraph">I've been seriously studying front-end web programming since 2023. Before that, I had completed a few personal projects and done some freelance work for
-                        friends and family, but I never intended to pursue it as a career. What I mean is that today I
-                        am absolutely fascinated by programming, and I plan to dive much deeper into it! How did I not
-                        realize this sooner?</p><br>
-            </section>
-            <section class="container">
-                <h2 class="h2">What can be found in this website?</h2>
+        <section class="container">
+            <h2 class="h2">What can be found in this website?</h2>
 
-                <p class="paragraph"><span style="color: var(--letter-b-bright); font-weight: bold;">About me:
-                    </span>Here you can learn more about Jazzo's resume, experience, degrees, preferred fields of study,
-                    courses, and more. In this section, you'll also find my certificates.</p>
+            <p class="paragraph">
+                <span style="color: var(--letter-b-bright); font-weight: bold;">About me:</span>
+                Here you can learn more about Jazzo's resume, experience, degrees, preferred fields of study,
+                courses, and more. In this section, you'll also find my certificates.
+            </p>
 
-                <p class="paragraph"><span style="color: var(--letter-b-bright); font-weight: bold;">Portfolio:
-                    </span>In this special section, you'll find links to my best projects. These will lead you to
-                    GitHub, where you can check the code, as well as to images, videos, or live projects where you can
-                    see and test the final product.</p>
+            <p class="paragraph">
+                <span style="color: var(--letter-b-bright); font-weight: bold;">Portfolio:</span>
+                In this special section, you'll find links to my best projects. These will lead you to
+                GitHub, where you can check the code, as well as to images, videos, or live projects where you can
+                see and test the final product.
+            </p>
 
-                <p class="paragraph"><span style="color: var(--letter-b-bright); font-weight: bold;">Articles:
-                    </span>Here you'll find a list of articles I've written, along with summaries I made during my
-                    studies. They serve as a way to help me remember and to assist anyone interested in learning from
-                    them.</p>
+            <p class="paragraph">
+                <span style="color: var(--letter-b-bright); font-weight: bold;">Articles:</span>
+                Here you'll find a list of articles I've written, along with summaries I made during my
+                studies. They serve as a way to help me remember and to assist anyone interested in learning from
+                them.
+            </p>
 
-                <p class="paragraph"><span style="color: var(--letter-b-bright); font-weight: bold;">Contact: </span>If
-                    you'd like to get in touch, you'll find my contact information here. You can also send me a message
-                    through the form if you'd like to know more.</p>
+            <p class="paragraph">
+                <span style="color: var(--letter-b-bright); font-weight: bold;">Contact:</span>
+                If you'd like to get in touch, you'll find my contact information here. You can also send me a message
+                through the form if you'd like to know more.
+            </p>
 
-                <p class="paragraph"><span style="color: var(--letter-b-bright); font-weight: bold;">Miscellaneous:
-                    </span>In this section, you'll find general and random information about me, like some of my
-                    interests. It's definitely not necessary, but I thought it would be fun to include.</p>
+            <p class="paragraph">
+                <span style="color: var(--letter-b-bright); font-weight: bold;">Miscellaneous:</span>
+                In this section, you'll find general and random information about me, like some of my
+                interests. It's definitely not necessary, but I thought it would be fun to include.
+            </p>
+            
+        </section>
 
-                </article>
-            </section>
     </main>
+
     <footer class="footer">
         <script src="main.js"></script>
         <div id="footer-placeholder"></div>
