--- a/pt-br/pt-br.html
+++ b/pt-br/pt-br.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
@@ -9,11 +9,10 @@
 </head>
 
 <body>
-    <header class="header">
+       <header class="header">
         <div id="header-placeholder"></div>
     </header>
-
-    <main>
+     <main>
         <section class="homeContainer">
             <img src="../img/eu.jpeg" alt="Jazão Cordeiro, um homem latino corpulento vestido de preto" class="personalPhoto">
             <article class="introduction">
@@ -32,8 +31,13 @@
                 <p class="paragraph">Estou estudando programação front-end de forma séria desde 2023. Antes disso, eu havia feito alguns projetos pessoais e trabalhado como freelancer para
                     amigos e familiares, mas nunca tive a intenção de seguir isso como carreira. O que quero dizer é que hoje
                     estou absolutamente fascinado pela programação, e planejo me aprofundar muito mais nisso! Como não percebi isso antes?</p><br>
-            </section>
+                    
+           </article>
+                </section>
+
+
             <section class="container">
+
                 <h2 class="h2">O que você pode encontrar neste site?</h2>
 
                 <p class="paragraph"><span style="color: var(--letter-b-bright); font-weight: bold;">Sobre mim:
@@ -59,6 +63,7 @@
                     interesses. Definitivamente não é necessário, mas achei que seria divertido incluir.</p>
 
             </section>
+
         </main>
     <footer class="footer">
         <script src="../main.js"></script>
