--- a/es/header-es.html
+++ b/es/header-es.html
@@ -1,4 +1,12 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
+    <title>encabezado</title>
 </head>
+
         <header class="header">
             <section class="groupHead">
                 <a href="#" class="logo"><img src="../img/logo.png" alt="logo" class="mylogo"></a>
