Adicionando links interos que faltavam nas páginas index.

--- a/es/es.html
+++ b/es/es.html
@@ -24,19 +24,21 @@
             <section class="container">
                 <h2 class="h2">¿Qué se puede encontrar en este sitio web?</h2>
 
-                <p class="paragraph"><span style="color: var(--letter-b-bright); font-weight: bold;">Sobre mí:
-                    </span>Aquí puedes aprender más sobre el currículum, experiencias, títulos, campos de estudio preferidos, cursos y más de Jazzo. En esta sección, también encontrarás mis certificados.</p>
+                <p class="paragraph">
+                    <a href="sobre-es.html"><span style="color: var(--letter-b-bright); font-weight: bold;">Sobre mí:</span></a>
+                    Aquí puedes aprender más sobre el currículum, experiencias, títulos, campos de estudio preferidos, cursos y más de Jazzo. En esta sección, también encontrarás mis certificados.</p>
 
-                <p class="paragraph"><span style="color: var(--letter-b-bright); font-weight: bold;">Portafolio:
-                    </span>En esta sección especial, encontrarás enlaces a mis mejores proyectos. Estos te llevarán a GitHub, donde podrás revisar el código, así como a imágenes, videos o proyectos en vivo donde podrás ver y probar el producto final.</p>
+                <p class="paragraph">
+                    <a href="portafolio.html"><span style="color: var(--letter-b-bright); font-weight: bold;">Portafolio:</span></a>
+                    En esta sección especial, encontrarás enlaces a mis mejores proyectos. Estos te llevarán a GitHub, donde podrás revisar el código, así como a imágenes, videos o proyectos en vivo donde podrás ver y probar el producto final.</p>
 
-                <p class="paragraph"><span style="color: var(--letter-b-bright); font-weight: bold;">Articulos:
-                    </span>Aquí encontrarás una lista de artículos que he escrito, junto con resúmenes que hice durante mis estudios. Sirven como una forma de ayudarme a recordar y ayudar a cualquiera que esté interesado en aprender de ellos.</p>
+                <p class="paragraph">
+                    <a href="contacto.html"><span style="color: var(--letter-b-bright); font-weight: bold;">Contacto: </span></a>
+                    Si deseas ponerte en contacto, encontrarás mis datos de contacto aquí. También puedes enviarme un mensaje a través del formulario si deseas saber más.</p>
 
-                <p class="paragraph"><span style="color: var(--letter-b-bright); font-weight: bold;">Contacto: </span>Si deseas ponerte en contacto, encontrarás mis datos de contacto aquí. También puedes enviarme un mensaje a través del formulario si deseas saber más.</p>
-
-                <p class="paragraph"><span style="color: var(--letter-b-bright); font-weight: bold;">Varios:
-                    </span>En esta sección, encontrarás información general y aleatoria sobre mí, como algunos de mis intereses. Definitivamente no es necesario, pero pensé que sería divertido incluir.</p>
+                <p class="paragraph">
+                    <a href="miscelaneos.html"><span style="color: var(--letter-b-bright); font-weight: bold;">Varios:</span></a>
+                    En esta sección, encontrarás información general y aleatoria sobre mí, como algunos de mis intereses. Definitivamente no es necesario, pero pensé que sería divertido incluir.</p>
 
                 </article>
             </section>
