--- a/index.html
+++ b/index.html
@@ -47,33 +47,26 @@
             <h2 class="h2">What can be found in this website?</h2>
 
             <p class="paragraph">
-                <span style="color: var(--letter-b-bright); font-weight: bold;">About me:</span>
+                <a href="about-me-en.html"><span style="color: var(--letter-b-bright); font-weight: bold;">About me:</span></a>
                 Here you can learn more about Jazzo's resume, experience, degrees, preferred fields of study,
                 courses, and more. In this section, you'll also find my certificates.
             </p>
 
             <p class="paragraph">
-                <span style="color: var(--letter-b-bright); font-weight: bold;">Portfolio:</span>
+                <a href="portfolio.html"><span style="color: var(--letter-b-bright); font-weight: bold;">Portfolio:</span></a>
                 In this special section, you'll find links to my best projects. These will lead you to
                 GitHub, where you can check the code, as well as to images, videos, or live projects where you can
                 see and test the final product.
             </p>
 
             <p class="paragraph">
-                <span style="color: var(--letter-b-bright); font-weight: bold;">Articles:</span>
-                Here you'll find a list of articles I've written, along with summaries I made during my
-                studies. They serve as a way to help me remember and to assist anyone interested in learning from
-                them.
-            </p>
-
-            <p class="paragraph">
-                <span style="color: var(--letter-b-bright); font-weight: bold;">Contact:</span>
+                <a href="contact.html"><span style="color: var(--letter-b-bright); font-weight: bold;">Contact:</span></a>
                 If you'd like to get in touch, you'll find my contact information here. You can also send me a message
                 through the form if you'd like to know more.
             </p>
 
             <p class="paragraph">
-                <span style="color: var(--letter-b-bright); font-weight: bold;">Miscellaneous:</span>
+                <a href="miscelaneous.html"><span style="color: var(--letter-b-bright); font-weight: bold;">Miscellaneous:</span></a>
                 In this section, you'll find general and random information about me, like some of my
                 interests. It's definitely not necessary, but I thought it would be fun to include.
             </p>
