--- a/pt-br/pt-br.html
+++ b/pt-br/pt-br.html
@@ -40,26 +40,25 @@
 
                 <h2 class="h2">O que você pode encontrar neste site?</h2>
 
-                <p class="paragraph"><span style="color: var(--letter-b-bright); font-weight: bold;">Sobre mim:
-                    </span>Aqui você pode aprender mais sobre o currículo, experiência, graus, áreas de estudo preferidas,
+                <p class="paragraph">
+                    <a href="./sobre.html"><span style="color: var(--letter-b-bright); font-weight: bold;">Sobre mim:</span></a>
+                    Aqui você pode aprender mais sobre o currículo, experiência, graus, áreas de estudo preferidas,
                     cursos e muito mais de Jazzo. Nesta seção, você também encontrará meus certificados.</p>
 
-                <p class="paragraph"><span style="color: var(--letter-b-bright); font-weight: bold;">Portfólio:
-                    </span>Nesta seção especial, você encontrará links para meus melhores projetos. Esses links levarão você ao
+                <p class="paragraph">
+                    <a href="./portfoliopt.html"><span style="color: var(--letter-b-bright); font-weight: bold;">Portfólio:</span></a>
+                    Nesta seção especial, você encontrará links para meus melhores projetos. Esses links levarão você ao
                     GitHub, onde você pode verificar o código, além de imagens, vídeos ou projetos ao vivo onde você pode
                     ver e testar o produto final.</p>
 
-                <p class="paragraph"><span style="color: var(--letter-b-bright); font-weight: bold;">Artigos:
-                    </span>Aqui você encontrará uma lista de artigos que escrevi, junto com resumos que fiz durante meus
-                    estudos. Eles servem como uma forma de me ajudar a lembrar e também para ajudar qualquer pessoa interessada
-                    em aprender com eles.</p>
-
-                <p class="paragraph"><span style="color: var(--letter-b-bright); font-weight: bold;">Contato: </span>Se
-                    você quiser entrar em contato, encontrará minhas informações de contato aqui. Você também pode me enviar uma mensagem
+                <p class="paragraph">
+                    <a href="./contato.html"><span style="color: var(--letter-b-bright); font-weight: bold;">Contato: </span></a>
+                    Se você quiser entrar em contato, encontrará minhas informações de contato aqui. Você também pode me enviar uma mensagem
                     através do formulário, caso queira saber mais.</p>
 
-                <p class="paragraph"><span style="color: var(--letter-b-bright); font-weight: bold;">Diversos:
-                    </span>Nesta seção, você encontrará informações gerais e aleatórias sobre mim, como alguns dos meus
+                <p class="paragraph">
+                    <a href="./miscelanea.html"><span style="color: var(--letter-b-bright); font-weight: bold;">Diversos:</span></a>
+                    Nesta seção, você encontrará informações gerais e aleatórias sobre mim, como alguns dos meus
                     interesses. Definitivamente não é necessário, mas achei que seria divertido incluir.</p>
 
             </section>
