--- a/es/header-es.html
+++ b/es/header-es.html
@@ -14,7 +14,6 @@
                     <a href="es.html" class="listagem">Inicio</a><p class="separador">|</p>
                     <a href="sobre-es.html" class="listagem">Sobre mí</a><p class="separador">|</p>
                     <a href="portafolio.html" class="listagem">Portafolio</a><p class="separador">|</p>
-                    <a href="articulo.html" class="listagem">Artículos</a><p class="separador">|</p>
                     <a href="contacto.html" class="listagem">Contacto</a><p class="separador">|</p>
                     <a href="miscelaneos.html" class="listagem">Misceláneos</a>
                 </nav>
@@ -28,6 +27,11 @@
                         <div class="trilho" id="trilho">
                             <div class="indicador"></div>
                         </div>
+                    </div>
+                          <div class="hamburger">
+                        <span class="line line1"></span>
+                        <span class="line line2"></span>
+                        <span class="line line3"></span>
                     </div>
             </section>
 </header>
