--- a/pt-br/header-pt.html
+++ b/pt-br/header-pt.html
@@ -14,7 +14,6 @@
                     <a href="./pt-br.html" class="listagem">Início</a><p class="separador">|</p>
                     <a href="./sobre.html" class="listagem">Sobre mim</a><p class="separador">|</p>
                     <a href="./portfoliopt.html" class="listagem">Portfólio </a><p class="separador">|</p>
-                    <a href="./artigos.html" class="listagem">Artigos </a><p class="separador">|</p>
                     <a href="./contato.html" class="listagem">Contato</a><p class="separador">|</p>
                     <a href="./miscelanea.html" class="listagem">Miscelâneas</a>
                 </nav>
@@ -28,6 +27,11 @@
                         <div class="trilho" id="trilho">
                             <div class="indicador"></div>
                         </div>
+                    </div>
+                          <div class="hamburger">
+                        <span class="line line1"></span>
+                        <span class="line line2"></span>
+                        <span class="line line3"></span>
                     </div>
              
                             </section>
